fixing css for carousels including padding, flex gap, gradient mask-image for fade on fifth book, and background colors

--- a/static/css/components/carousel.less
+++ b/static/css/components/carousel.less
@@ -180,17 +180,6 @@
     height: @height-cover-compact;
   }
 
-  .book .book-cover .mobile {
-    height: auto;
-  }
-  .book .bookcover .mobile {
-    height: auto;
-  }
-
-  .book .carousel__item .mobile .mybooks {
-    width: 70px !important;
-  }
-
   .carousel__item__blankcover {
     height: @height-cover-compact;
     padding: 20% 10px 10px;
